kubernetes/lookit/base/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32403
    port: 5000
    protocol: TCP
    targetPort: 80
  type: NodePort
