kubernetes/lookit/base/web/web-primary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
spec:
  ingressClassName: nginx
  rules:
  - host: $(SITE_DOMAIN)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              name: http
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              name: http
  tls:
  - hosts:
    - $(SITE_DOMAIN)
    secretName: lookit-cert
