kubernetes/lookit/base/web/web-secondary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-secondary-domain-redirect-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: https://$(SITE_DOMAIN)/$1
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
spec:
  ingressClassName: nginx
  rules:
  - host: $(SECONDARY_DOMAIN)
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              name: http
  tls:
  - hosts:
    - $(SECONDARY_DOMAIN)
    secretName: lookit-secondary-cert
